connected presentation layer with persistance layer with jpa,postgres database

--- a/learningRestAPIs/src/main/resources/application.properties
+++ b/learningRestAPIs/src/main/resources/application.properties
@@ -1,1 +1,15 @@
 spring.application.name=learningRestAPIs
+
+
+#Port configuration
+#server.port=8081 //port on which your application will be running
+
+#DB configuration
+spring.datasource.url=jdbc:postgresql://localhost:5432/studentDB
+spring.datasource.username=postgres
+spring.datasource.password=rahul
+
+#JPA SETTINGS (jakarta persistance API)
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
